syntax = "proto3";

package com.ql.cron;

service CronService {
  rpc addCron(AddCronRequest) returns (AddCronResponse);
  rpc delCron(DeleteCronRequest) returns (DeleteCronResponse);
}

message Cron {
  string id = 1;
  string schedule = 2;
  string command = 3;
}

message AddCronRequest { repeated Cron crons = 1; }

message AddCronResponse {}

message DeleteCronRequest { repeated string ids = 1; }

message DeleteCronResponse {}